=======
CHANGES
=======

3.6.2 (unreleased)
------------------

- Nothing changed yet.


3.6.1 (2010-01-08)
------------------

- Replaced the dependency on zope.deprecation with BBB imports

- Made the dependency on zope.app.publisher explicit

- Fix tests using a newer zope.publisher that requires zope.login.

3.6.0 (2009-05-23)
------------------

- Moved IHTTPException, IMethodNotAllowed, and MethodNotAllowed from
  zope.app.http to zope.publisher.interfaces.http, fixing dependency
  cycles involving zope.app.http.

3.5.2 (2009-04-01)
------------------

- Replaced deprecated 'zope:defaultView' directive
  with 'browser:defaultView'

3.5.1 (2009-03-12)
------------------

- If the 'CONTENT_LENGTH' header is provided, provide this length as
  argument to the ``read`` method of the input stream object.

3.5.0 (2009-02-01)
------------------

- Change dependency on zope.app.container to zope.container.

3.4.4 (2009-01-29)
------------------

- Make tests compatible with new zope.traversing release.

3.4.3 (2009-01-27)
------------------

- Added missing depencendy: zope.app.zcmlfiles

3.4.2 (2009-01-26)
------------------

- Add a couple of tests to the OPTIONS verb.

- Substitute zope.app.zapi by direct calls to its wrapped apis and get
  rid of zope.app.zapi as a dependency. See bug LP219302.


3.4.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` deprecation warning.


3.4.0 (2007-10-24)
------------------

- Initial release independent of the main Zope tree.